<resources>
    <string name="app_name">Acercate</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="forgotpass">Forgot password?</string>
    <string name="login">Login</string>
    <string name="remember">Remember</string>
    <string name="user">User</string>
    <string name="pass">Password</string>
    <string name="re_pass">Repeat Password</string>
    <string name="id">Id</string>
    <string name="back">Back</string>
    <string name="loading">Loading…</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User name</string>
    <string name="nav_header_subtitle">Rol</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Logout</string>
    <string name="create_date">Create Date</string>
    <string name="provider_suscription">Provider suscription</string>
    <string name="assign_date">Assign date</string>
    <string name="my_dates">My dates</string>
    <string name="assigned_date">Assigned dates</string>
    <string name="provider">Provider</string>
    <string name="exit">Exit</string>
    <string name="Error">"Error: "</string>
    <string name="date_description">Date description</string>
    <string name="create_date_disponibility">Create date disponibility</string>
    <string name="date">Date</string>
    <string name="dates_quantity">Dates quantity</string>
</resources>