<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_create_date"
            android:icon="@drawable/ic_menu_date"
            android:title="@string/create_date" />
        <item
            android:id="@+id/nav_assing_date"
            android:icon="@drawable/ic_menu_date"
            android:title="@string/assign_date" />
        <item
            android:id="@+id/nav_my_dates"
            android:icon="@drawable/ic_menu_date"
            android:title="@string/my_dates" />
        <item
            android:id="@+id/nav_assigned_dates"
            android:icon="@drawable/ic_menu_date"
            android:title="@string/assigned_date" />

        <item
            android:id="@+id/nav_close"
            android:icon="@drawable/ic_close"
            android:title="@string/exit" />

    </group>
</menu>