<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:padding="20dp"
    android:background="@drawable/side_nav_bar"
    android:gravity="top"
    android:orientation="vertical"

    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:scaleType="fitCenter"

        app:srcCompat="@drawable/acercate" />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textColor="#00695C"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        />

    <TextView
        android:id="@+id/tvRazonSocial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#00695C"
        android:text="@string/nav_header_subtitle" />
</LinearLayout>